--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#get-started" class="btn primary">Get Started</a></li>
             </div>
             <div class="menu-btn">
-                <i class="fas fa-bars"></i> <!-- Ícone de menu -->
+                <i class="fas fa-bars"></i>
             </div>
         </div>
     </nav>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="hero-image" data-aos="fade-left" data-aos-delay="300">
-                <img src="assets/minecraft-server.png" alt="Minecraft Server">
+                <img src="assets/percenhost.png" alt="Percen Host Icon" class="small-image">
             </div>
         </div>
     </section>
