--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#get-started" class="btn primary">Get Started</a></li>
+                <li><button id="dark-mode-toggle" class="btn secondary">Dark Mode</button></li>
             </div>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -34,7 +35,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 data-aos="fade-up">Great Performance for Your Minecraft Server</h1>
+                <h1 data-aos="fade-up">Great Performance for Your <span class="typing-effect"></span></h1>
                 <p data-aos="fade-up" data-aos-delay="200">
                     Experience the best hosting with high performance, advanced security, and 24/7 support.
                 </p>
@@ -126,6 +127,28 @@
         </div>
     </section>
 
+    <!-- Statistics Section -->
+    <section id="statistics" class="statistics">
+        <div class="section-title">
+            <h2>Our Statistics</h2>
+            <div class="title-bar"></div>
+        </div>
+        <div class="statistics-container">
+            <div class="statistic-card">
+                <span class="counter" data-target="1000">0</span>
+                <p>Servers Hosted</p>
+            </div>
+            <div class="statistic-card">
+                <span class="counter" data-target="500">0</span>
+                <p>Happy Clients</p>
+            </div>
+            <div class="statistic-card">
+                <span class="counter" data-target="99">0</span>
+                <p>Uptime (%)</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 PercenHost. All rights reserved.</p>
@@ -134,6 +157,16 @@
         </div>
     </footer>
 
+    <!-- Modal de Confirmação -->
+    <div id="confirmation-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <p>Você está prestes a escolher um plano. Tem certeza?</p>
+            <button class="btn primary">Confirmar</button>
+        </div>
+    </div>
+
+    <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         // Initialize AOS
@@ -156,6 +189,90 @@
             if (!menuBtn.contains(e.target) && !navItems.contains(e.target)) {
                 menuBtn.classList.remove('open');
                 navItems.classList.remove('active');
+            }
+        });
+
+        // Smooth Scroll for Navigation Links
+        document.querySelectorAll('.nav-items a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href');
+                const targetSection = document.querySelector(targetId);
+                targetSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            });
+        });
+
+        // Typing Effect
+        document.addEventListener('DOMContentLoaded', function () {
+            const typed = new Typed('.typing-effect', {
+                strings: ["Minecraft Server", "Gaming Experience", "Community"],
+                typeSpeed: 100,
+                backSpeed: 50,
+                loop: true
+            });
+        });
+
+        // Animated Counter
+        document.addEventListener('DOMContentLoaded', function () {
+            const counters = document.querySelectorAll('.counter');
+            const speed = 200; // Velocidade da animação
+
+            counters.forEach(counter => {
+                const updateCount = () => {
+                    const target = +counter.getAttribute('data-target');
+                    const count = +counter.innerText;
+
+                    const increment = target / speed;
+
+                    if (count < target) {
+                        counter.innerText = Math.ceil(count + increment);
+                        setTimeout(updateCount, 1);
+                    } else {
+                        counter.innerText = target;
+                    }
+                };
+
+                updateCount();
+            });
+        });
+
+        // Modal Example
+        document.addEventListener('DOMContentLoaded', function () {
+            const modal = document.getElementById('confirmation-modal');
+            const openModalButtons = document.querySelectorAll('.btn.primary');
+            const closeModalButton = document.querySelector('.close-modal');
+
+            openModalButtons.forEach(button => {
+                button.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    modal.style.display = 'block';
+                });
+            });
+
+            closeModalButton.addEventListener('click', function () {
+                modal.style.display = 'none';
+            });
+
+            window.addEventListener('click', function (e) {
+                if (e.target === modal) {
+                    modal.style.display = 'none';
+                }
+            });
+        });
+
+        // Dark Mode Toggle
+        document.addEventListener('DOMContentLoaded', function () {
+            const darkModeToggle = document.getElementById('dark-mode-toggle');
+            const body = document.body;
+
+            darkModeToggle.addEventListener('click', function () {
+                body.classList.toggle('dark-mode');
+                localStorage.setItem('dark-mode', body.classList.contains('dark-mode'));
+            });
+
+            // Verifica o estado salvo
+            if (localStorage.getItem('dark-mode') === 'true') {
+                body.classList.add('dark-mode');
             }
         });
     </script>
