Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
         </div>
         <div class="statistics-container">
             <div class="statistic-card">
-                <span class="counter" data-target="1000">0</span>
+                <span class="counter" data-target="Coming Soon">0</span>
                 <p>Servers Hosted</p>
             </div>
             <div class="statistic-card">
-                <span class="counter" data-target="500">0</span>
+                <span class="counter" data-target="Coming Soon">0</span>
                 <p>Happy Clients</p>
             </div>
             <div class="statistic-card">
-                <span class="counter" data-target="99">0</span>
+                <span class="counter" data-target="Coming Soon">0</span>
                 <p>Uptime (%)</p>
             </div>
         </div>
