--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
     <div id="confirmation-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <p>Você está prestes a escolher um plano. Tem certeza?</p>
-            <button class="btn primary">Confirmar</button>
+            <p>You are about to choose a plan. Are you sure?</p>
+            <button class="btn primary">Confirm</button>
         </div>
     </div>
 
