--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#get-started" class="btn primary">Get Started</a></li>
-                <li><button id="dark-mode-toggle" class="btn secondary">Dark Mode</button></li>
+                <li>
+                    <input type="text" id="color-picker" placeholder="Choose color...">
+                    <button id="apply-color">Apply</button>
+                </li>
             </div>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -157,124 +159,8 @@
         </div>
     </footer>
 
-    <!-- Modal de Confirmação -->
-    <div id="confirmation-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <p>You are about to choose a plan. Are you sure?</p>
-            <button class="btn primary">Confirm</button>
-        </div>
-    </div>
-
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        // Initialize AOS
-        AOS.init({
-            duration: 1000,
-            once: true
-        });
-
-        // Mobile Menu Toggle
-        const menuBtn = document.querySelector('.menu-btn');
-        const navItems = document.querySelector('.nav-items');
-        
-        menuBtn.addEventListener('click', () => {
-            menuBtn.classList.toggle('open');
-            navItems.classList.toggle('active');
-        });
-
-        // Close menu when clicking outside
-        document.addEventListener('click', (e) => {
-            if (!menuBtn.contains(e.target) && !navItems.contains(e.target)) {
-                menuBtn.classList.remove('open');
-                navItems.classList.remove('active');
-            }
-        });
-
-        // Smooth Scroll for Navigation Links
-        document.querySelectorAll('.nav-items a').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                const targetSection = document.querySelector(targetId);
-                targetSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
-            });
-        });
-
-        // Typing Effect
-        document.addEventListener('DOMContentLoaded', function () {
-            const typed = new Typed('.typing-effect', {
-                strings: ["Minecraft Server", "Gaming Experience", "Community"],
-                typeSpeed: 100,
-                backSpeed: 50,
-                loop: true
-            });
-        });
-
-        // Animated Counter
-        document.addEventListener('DOMContentLoaded', function () {
-            const counters = document.querySelectorAll('.counter');
-            const speed = 200; // Velocidade da animação
-
-            counters.forEach(counter => {
-                const updateCount = () => {
-                    const target = +counter.getAttribute('data-target');
-                    const count = +counter.innerText;
-
-                    const increment = target / speed;
-
-                    if (count < target) {
-                        counter.innerText = Math.ceil(count + increment);
-                        setTimeout(updateCount, 1);
-                    } else {
-                        counter.innerText = target;
-                    }
-                };
-
-                updateCount();
-            });
-        });
-
-        // Modal Example
-        document.addEventListener('DOMContentLoaded', function () {
-            const modal = document.getElementById('confirmation-modal');
-            const openModalButtons = document.querySelectorAll('.btn.primary');
-            const closeModalButton = document.querySelector('.close-modal');
-
-            openModalButtons.forEach(button => {
-                button.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    modal.style.display = 'block';
-                });
-            });
-
-            closeModalButton.addEventListener('click', function () {
-                modal.style.display = 'none';
-            });
-
-            window.addEventListener('click', function (e) {
-                if (e.target === modal) {
-                    modal.style.display = 'none';
-                }
-            });
-        });
-
-        // Dark Mode Toggle
-        document.addEventListener('DOMContentLoaded', function () {
-            const darkModeToggle = document.getElementById('dark-mode-toggle');
-            const body = document.body;
-
-            darkModeToggle.addEventListener('click', function () {
-                body.classList.toggle('dark-mode');
-                localStorage.setItem('dark-mode', body.classList.contains('dark-mode'));
-            });
-
-            // Verifica o estado salvo
-            if (localStorage.getItem('dark-mode') === 'true') {
-                body.classList.add('dark-mode');
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
