--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#get-started" class="btn primary">Get Started</a></li>
-                <li><button id="dark-mode-toggle" class="btn secondary">Dark Mode</button></li>
+                <li><button id="dark-mode-toggle" class="btn primary">Dark Mode</button></li>
             </div>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
