--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#get-started" class="btn primary">Get Started</a></li>
                 <li><button id="dark-mode-toggle" class="btn secondary">Dark Mode</button></li>
             </div>
             <div class="menu-btn">
@@ -40,7 +39,6 @@
                     Experience the best hosting with high performance, advanced security, and 24/7 support.
                 </p>
                 <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                    <a href="#get-started" class="btn primary">Get Started</a>
                     <a href="#features" class="btn secondary">Learn More</a>
                 </div>
             </div>
@@ -87,7 +85,7 @@
                     <li>4GB RAM</li>
                     <li>DDoS Protection</li>
                 </ul>
-                <a href="#get-started" class="btn primary">Get Started</a>
+                <a href="#pricing" class="btn primary">Get Started</a>
             </div>
             <div class="pricing-card" data-aos="fade-up" data-aos-delay="200">
                 <h3>Advanced Plan</h3>
@@ -98,7 +96,7 @@
                     <li>DDoS Protection</li>
                     <li>Daily Backups</li>
                 </ul>
-                <a href="#get-started" class="btn primary">Get Started</a>
+                <a href="#pricing" class="btn primary">Get Started</a>
             </div>
             <div class="pricing-card" data-aos="fade-up" data-aos-delay="400">
                 <h3>Premium Plan</h3>
@@ -110,20 +108,8 @@
                     <li>Daily Backups</li>
                     <li>Priority Support</li>
                 </ul>
-                <a href="#get-started" class="btn primary">Get Started</a>
+                <a href="#pricing" class="btn primary">Get Started</a>
             </div>
-        </div>
-    </section>
-
-    <!-- Get Started Section -->
-    <section id="get-started" class="get-started">
-        <div class="section-title">
-            <h2>Get Started Today</h2>
-            <div class="title-bar"></div>
-        </div>
-        <div class="get-started-container">
-            <p>Start hosting your Minecraft server with PercenHost now!</p>
-            <a href="#pricing" class="btn primary">Choose a Plan</a>
         </div>
     </section>
 
@@ -156,15 +142,6 @@
             <a href="https://discord.gg/seuservidor" class="social-icon"><i class="fab fa-discord"></i></a>
         </div>
     </footer>
-
-    <!-- Modal de Confirmação -->
-    <div id="confirmation-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <p>Você está prestes a escolher um plano. Tem certeza?</p>
-            <button class="btn primary">Confirmar</button>
-        </div>
-    </div>
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -233,30 +210,6 @@
                 };
 
                 updateCount();
-            });
-        });
-
-        // Modal Example
-        document.addEventListener('DOMContentLoaded', function () {
-            const modal = document.getElementById('confirmation-modal');
-            const openModalButtons = document.querySelectorAll('.btn.primary');
-            const closeModalButton = document.querySelector('.close-modal');
-
-            openModalButtons.forEach(button => {
-                button.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    modal.style.display = 'block';
-                });
-            });
-
-            closeModalButton.addEventListener('click', function () {
-                modal.style.display = 'none';
-            });
-
-            window.addEventListener('click', function (e) {
-                if (e.target === modal) {
-                    modal.style.display = 'none';
-                }
             });
         });
 
