--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PercenHost - Minecraft Hosting</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -33,11 +34,11 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Great Performance for Your <span class="typing-effect"></span></h1>
-                <p>
+                <h1 data-aos="fade-up">Great Performance for Your <span class="typing-effect"></span></h1>
+                <p data-aos="fade-up" data-aos-delay="200">
                     Experience the best hosting with high performance, advanced security, and 24/7 support.
                 </p>
-                <div class="cta-buttons">
+                <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                     <a href="#features" class="btn secondary">Learn More</a>
                 </div>
             </div>
@@ -51,17 +52,17 @@
             <div class="title-bar"></div>
         </div>
         <div class="features-container">
-            <div class="feature-card">
+            <div class="feature-card" data-aos="fade-up">
                 <i class="fas fa-rocket"></i>
                 <h3>High Performance</h3>
                 <p>Our servers are optimized for the best Minecraft experience.</p>
             </div>
-            <div class="feature-card">
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
                 <i class="fas fa-shield-alt"></i>
                 <h3>Advanced Security</h3>
                 <p>Protection against DDoS attacks and advanced security measures.</p>
             </div>
-            <div class="feature-card">
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                 <i class="fas fa-headset"></i>
                 <h3>24/7 Support</h3>
                 <p>Our team is always available to help you with any issues.</p>
@@ -76,7 +77,7 @@
             <div class="title-bar"></div>
         </div>
         <div class="pricing-container">
-            <div class="pricing-card">
+            <div class="pricing-card" data-aos="fade-up">
                 <h3>Basic Plan</h3>
                 <p class="price">Prices Coming Soon</p>
                 <ul>
@@ -86,7 +87,7 @@
                 </ul>
                 <a href="#pricing" class="btn primary">Get Started</a>
             </div>
-            <div class="pricing-card">
+            <div class="pricing-card" data-aos="fade-up" data-aos-delay="200">
                 <h3>Advanced Plan</h3>
                 <p class="price">Prices Coming Soon</p>
                 <ul>
@@ -97,7 +98,7 @@
                 </ul>
                 <a href="#pricing" class="btn primary">Get Started</a>
             </div>
-            <div class="pricing-card">
+            <div class="pricing-card" data-aos="fade-up" data-aos-delay="400">
                 <h3>Premium Plan</h3>
                 <p class="price">Prices Coming Soon</p>
                 <ul>
@@ -143,7 +144,14 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 1000,
+            once: true
+        });
+
         // Mobile Menu Toggle
         const menuBtn = document.querySelector('.menu-btn');
         const navItems = document.querySelector('.nav-items');
